<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_cadastre"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/size_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_register_form"
                android:layout_marginEnd="@dimen/margin_register_form"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/img_perfil_register"
                    android:layout_height="@dimen/img_perfil_register"
                    android:src="@drawable/default_image_user"
                    android:layout_gravity="center"
                    android:transitionName="@string/transition_avatar"
                    app:civ_border_width="1dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_name"
                    android:textColorHint="@color/colorPrimary"
                    app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                    <EditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="text|textCapWords"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_cpf"
                    android:textColorHint="@color/colorPrimary"
                    app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                    <EditText
                        android:id="@+id/edit_text_cpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="number"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_cell_fone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_cell_fone"
                    android:textColorHint="@color/colorPrimary"
                    app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                    <EditText
                        android:id="@+id/edit_text_cell_fone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="phone"
                        android:maxLength="14"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimary"
                    app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_birthday"
                    android:textColorHint="@color/colorPrimary"
                    app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                    <EditText
                        android:id="@+id/edit_text_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textStyle="italic" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/container_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical"
                    tools:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cadastre"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:padding="8dp"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/prompt_next"
        android:layout_marginStart="@dimen/margin_register_form"
        android:layout_marginEnd="@dimen/margin_register_form"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"/>

</RelativeLayout>