<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_cadastre"
        android:layout_marginTop="@dimen/size_eight"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_register_form"
            android:layout_marginEnd="@dimen/margin_register_form"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/prompt_old_password"
                android:visibility="gone"
                app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                <EditText
                    android:id="@+id/edit_text_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:maxLength="24"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/prompt_password"
                app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:maxLength="24"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/prompt_confirm_password"
                app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

                <EditText
                    android:id="@+id/edit_text_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:maxLength="24"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cadastre"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:padding="8dp"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/prompt_register"
        android:layout_marginStart="@dimen/margin_register_form"
        android:layout_marginEnd="@dimen/margin_register_form"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"/>

</RelativeLayout>