<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:theme="@style/LoginActivityStyle"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoTip"
        android:layout_width="@dimen/size_logo_login"
        android:layout_height="@dimen/size_logo_login"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top_logo_login"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/ic_mosquito" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTip">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/colorPrimary"
            app:helperTextTextAppearance="@style/TextHelperlAppearance.Login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login_user"
                android:drawablePadding="8dp"
                android:hint="@string/prompt_cpf"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimary"
            app:helperTextTextAppearance="@style/TextHelperlAppearance.Login"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login_password"
                android:drawablePadding="8dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/prompt_ok"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:id="@+id/containerChipCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/recoveryPassword"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/prompt_guardar_meu_cpf"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerTouchId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/containerChipCpf"
                android:layout_alignLeft="@id/containerChipCpf"
                android:layout_alignRight="@id/containerChipCpf"
                android:layout_marginStart="0dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="0dp"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/containerChipTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/chip2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:checked="false"
                        android:focusable="false"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/prompt_logar_com_leitor"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_fingerprint"
                    app:tint="@color/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/recoveryPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:gravity="center|end"
                android:text="Recuperar senha"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:gravity="center"
        android:padding="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/prompt_acessar"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/container_register"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.267"
        tools:enabled="true" />

    <FrameLayout
        android:id="@+id/container_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_open_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:gravity="start|center"
            android:text="Primeiro acesso?\nCadastre-se"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageRegister"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center"
            android:layout_marginRight="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:tint="@color/white"
            android:src="@drawable/ic_pan_tool"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>